examples/invalid/semanticErr/declaration/basicTypeErr05.wacc
# type mismatch: bool <- char
# Output:
# #semantic error#

#Program:#

begin
  bool b = 't'
end
